# Flight-Turbulence-Prediction-System

./: .gitignore  .replit  FIXES_APPLIED.md  README.md  app.py  pyproject.toml  replit.md  requirements.txt  test_app.py
attached_assets/: BDE project review 1 ppt_1759811687565.pptx
models/: gradient_boost_model.joblib  lstm_turbulence.keras  scaler.joblib  scaler.pkl
pages/: 10_🚨_Alert_System.py  11_📊_Severity_Classification.py  12_🧠_Deep_Learning_Prediction.py  1_🗺️_Airport_Map.py  2_🌤️_Weather_Analysis.py  3_🤖_ML_Prediction.py  3_🤖_ML_Prediction_new.py  4_✈️_Route_Assessment.py  5_📊_Historical_Analysis.py  6_⚡_Real_Time_Prediction.py  7_🌬️_Atmospheric_Visualization.py  8_📤_Data_Upload.py  9_📈_Statistical_Dashboard.py  9_📝_Pilot_Reports.py
utils/: airport_data.py  alert_system.py  data_processing.py  database.py  lstm_model.py  ml_models.py  severity_classification.py  turbulence_calculator.py  weather_api.py
